--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "童昊阳/Haoyang Tong"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/个人照片.jpg"
   bio              : "CASIA/ZGCA/UCAS"
   location         : "Beijing, China"
   employer         :
